--- a/style.css
+++ b/style.css
@@ -20,9 +20,9 @@ body {
 .top-bar {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
   background-color: rgb(177, 174, 174);  list-style-type: none;
-  height: 75px;
+  height: 8vh;
   align-items: center;
 }
 
@@ -66,6 +66,7 @@ body {
 .one {
   display: flex;
   flex-direction: row;
+  justify-content: space-around;
 }
 
 
@@ -125,6 +126,8 @@ footer {
   flex-flow: row;
 }
 
+/*https://www.w3schools.com/howto/howto_css_social_media_buttons.asp to learn to animate buttons*/
+
 #join {
   border-radius: 15px;
   background-color: rgb(228, 22, 22); 
@@ -151,3 +154,27 @@ footer {
   display: flex;
   justify-content: center;
 }
+
+.subtitle {
+  transition-duration: 0.6s;
+}
+
+.subtitle:hover {
+  transform: scale(2) rotate(360deg);
+
+}
+
+@media only screen and (max-width: 640px) {
+  .top-bar {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  background-color: rgb(177, 174, 174);  list-style-type: none;
+  align-items: center;
+  }
+  .one {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
