--- a/style.css
+++ b/style.css
@@ -18,11 +18,14 @@ body {
 } 
 
 .top-bar {
+  font-size: 3vw;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  background-color: rgb(177, 174, 174);  list-style-type: none;
-  height: 8vh;
+  background-color: rgb(177, 174, 174);
+  padding-bottom: 2.5%; 
+  padding-top: 2.5%;
+  list-style-type: none;
   align-items: center;
 }
 
@@ -46,8 +49,8 @@ body {
   }
 
 .pic {
-  margin-right: 20px;
-  margin-bottom: 20px;
+  margin-right: 5vw;
+  margin-bottom: 5vw;
   width: 250px;
   height: 250px;
   clip:rect(0px,60px,200px,0px);
@@ -157,10 +160,11 @@ footer {
 
 .subtitle {
   transition-duration: 0.6s;
+  font-size: 4vw;
 }
 
 .subtitle:hover {
-  transform: scale(2) rotate(360deg);
+  transform: scale(1.5) rotate(360deg);
 
 }
 
